# OsmToRoadGraphRust

./: .gitignore  .travis.yml  Cargo.toml  README.md  convert.sh  pr_checker.sh  travis.yml
src/: cli.yaml  config.rs  config.yaml  config_creator.rs  graph.rs  graph_data.rs  lcc.rs  main.rs  network_type.rs  osm_convert.rs  osm_parse_config.rs  osm_parse_config_creator.rs  osm_reader.rs  output.rs  read_osm.rs  util.rs
